--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  
-   <script charset="utf-8" type="text/javascript" src="//js-eu1.hsforms.net/forms/embed/v2.js"></script>
+  <script type="text/javascript" src="https://embeds.iubenda.com/widgets/1c1062ed-216f-4abd-b5b4-edbee2678fc0.js"></script>
 
 
 
@@ -268,290 +267,8 @@
 <body>
 
 
-<style>
-/* Stili Generali della Sezione */
-#main-hubspot-container {
-    /* Contenitore principale Flexbox per le due colonne */
-    display: flex; 
-    gap: 20px;
-    max-width: 1200px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #ffffff;
-    border-radius: 10px;
-    box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
 
-/* Stile per la colonna della documentazione (sinistra) */
-#hubspot-form-testing {
-    flex: 2; /* Occupare 2/3 dello spazio */
-    padding: 20px;
-    background-color: #f9f9f9;
-    border: 1px solid #e0e0e0;
-    border-radius: 8px;
-}
 
-/* Stile per la colonna del div di test (destra) */
-#testing-target-container {
-    flex: 1; /* Occupare 1/3 dello spazio */
-    padding: 20px;
-    border: 2px dashed #007bff; /* Bordo blu tratteggiato in evidenza */
-    border-radius: 8px;
-    background-color: #e6f2ff;
-    min-height: 400px; 
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-
-#hubspot-form-testing h2 {
-    color: #007bff;
-    border-bottom: 2px solid #007bff;
-    padding-bottom: 10px;
-    margin-bottom: 20px;
-}
-
-#hubspot-form-testing h3, #testing-target-container h3 {
-    color: #333;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    font-size: 1.25em;
-    padding-bottom: 5px;
-    border-bottom: 1px solid #ddd;
-}
-
-#testing-target-container h3 {
-    color: #007bff;
-    border-bottom: 1px solid #007bff;
-}
-
-#hubspot-form-testing hr {
-    border: 0;
-    height: 1px;
-    background: #e0e0e0;
-    margin: 20px 0;
-}
-
-/* Stile Codice */
-#hubspot-form-testing pre {
-    background-color: #f4f4f4;
-    border: 1px solid #ddd;
-    border-left: 5px solid #007bff;
-    padding: 10px 15px;
-    margin: 15px 0;
-    overflow-x: auto;
-    border-radius: 4px;
-    font-family: 'Consolas', 'Courier New', monospace;
-    font-size: 0.9em;
-}
-
-#hubspot-form-testing code {
-    color: #d81b60;
-}
-
-/* Stile Liste */
-#hubspot-form-testing ol {
-    padding-left: 20px;
-}
-
-#hubspot-form-testing ol li {
-    margin-bottom: 15px;
-    line-height: 1.5;
-}
-
-/* Stile Tabelle (Parametri) */
-#hubspot-form-testing table {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 20px 0;
-    font-size: 0.9em;
-}
-
-#hubspot-form-testing th, 
-#hubspot-form-testing td {
-    border: 1px solid #e0e0e0;
-    padding: 10px 15px;
-    text-align: left;
-}
-
-#hubspot-form-testing th {
-    background-color: #007bff;
-    color: white;
-    font-weight: bold;
-    text-transform: uppercase;
-}
-
-#hubspot-form-testing tbody tr:nth-child(even) {
-    background-color: #f9f9f9;
-}
-
-#hubspot-form-testing tbody tr:hover {
-    background-color: #e6f2ff;
-}
-
-#hubspot-form-testing td:first-child {
-    font-weight: bold;
-    color: #333;
-    white-space: nowrap;
-}
-
-/* Stile del Div Target interno */
-#hubspot-form-container {
-    background-color: #fff;
-    padding: 15px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    flex-grow: 1; 
-    display: flex; 
-    justify-content: center;
-    align-items: center;
-    color: #666;
-    font-style: italic;
-    text-align: center;
-}
-</style>
-
-<div id="main-hubspot-container">
-    
-    <section id="hubspot-form-testing">
-        <h2>✍️ Integrazione e Testing dei Form HubSpot</h2>
-
-        <p>Questa sezione contiene il codice di base per l'embedding di un form HubSpot e le istruzioni per testarlo direttamente nella console del browser.</p>
-
-        <hr>
-
-        <h3>💻 Codice di Esempio per l'Embedding</h3>
-        <p>Il seguente blocco di codice <strong>JavaScript</strong> mostra la configurazione minima per caricare un form HubSpot:</p>
-        <pre><code>hbspt.forms.create({
-    portalId: "147076390",
-    formId: "e478edf8-da31-4a90-bcaa-9a8209aad522",
-    region: "eu1",
-});</code></pre>
-
-        <h3>➡️ Istruzioni per il Caricamento in Console</h3>
-        <ol>
-            <li>
-                <p><strong>Osserva il Contenitore Target:</strong> Il contenitore <code>#hubspot-form-container</code> è posizionato nella colonna di destra.</p>
-            </li>
-            <li>
-                <p><strong>Esegui il comando di creazione in Console:</strong> Apri la console del browser ed esegui il codice di configurazione. L'uso di <code>target</code> è cruciale per indicare la posizione esatta.</p>
-                <pre><code>hbspt.forms.create({
-    portalId: "147076390",
-    formId: "e478edf8-da31-4a90-bcaa-9a8209aad522",
-    region: "eu1",
-    target: "#hubspot-form-container" // Target del div a destra
-});</code></pre>
-                <p>Questo caricherà il form nel riquadro di fianco.</p>
-            </li>
-        </ol>
-
-        <hr>
-
-        <h3>📋 Riferimento Parametri <code>hbspt.forms.create()</code></h3>
-
-        <h4>Parametri di Base e Styling</h4>
-        <table>
-            <thead>
-                <tr>
-                    <th>Parametro</th>
-                    <th>Tipo</th>
-                    <th>Descrizione</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><strong>portalId</strong></td>
-                    <td>Number or string</td>
-                    <td>L'ID dell'account HubSpot.</td>
-                </tr>
-                <tr>
-                    <td><strong>formId</strong></td>
-                    <td>String</td>
-                    <td>L'ID del form.</td>
-                </tr>
-                <tr>
-                    <td><strong>region</strong></td>
-                    <td>String</td>
-                    <td>La regione dell'account (<code>na1</code> o <code>eu1</code>).</td>
-                </tr>
-                <tr>
-                    <td><strong>target</strong></td>
-                    <td>String</td>
-                    <td>Selettore CSS valido per l'elemento in cui incorporare il form.</td>
-                </tr>
-                <tr>
-                    <td><strong>redirectUrl</strong></td>
-                    <td>String</td>
-                    <td>URL di reindirizzamento dopo l'invio (non usabile con <code>inlineMessage</code>).</td>
-                </tr>
-                <tr>
-                    <td><strong>inlineMessage</strong></td>
-                    <td>String</td>
-                    <td>Messaggio da mostrare al posto del form dopo l'invio (non usabile con <code>redirectUrl</code>).</td>
-                </tr>
-                <tr>
-                    <td><strong>cssRequired</strong></td>
-                    <td>String</td>
-                    <td>Stringa CSS per styling. Settare a <code>""</code> per rimuovere lo styling di default.</td>
-                </tr>
-                <tr>
-                    <td><strong>formInstanceId</strong></td>
-                    <td>String</td>
-                    <td><strong>Obbligatorio</strong> se si incorpora lo stesso form più volte. Deve essere unico.</td>
-                </tr>
-                <tr>
-                    <td><strong>locale</strong></td>
-                    <td>String</td>
-                    <td>Il locale del form, usato per la lingua (errori, data, ecc.).</td>
-                </tr>
-            </tbody>
-        </table>
-
-        <h4>Parametri Callback (Funzioni)</h4>
-        <table>
-            <thead>
-                <tr>
-                    <th>Parametro</th>
-                    <th>Tipo</th>
-                    <th>Descrizione</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td><strong>onBeforeFormInit</strong></td>
-                    <td>Function</td>
-                    <td>Esegue <strong>prima</strong> della costruzione del form.</td>
-                </tr>
-                <tr>
-                    <td><strong>onFormReady</strong></td>
-                    <td>Function</td>
-                    <td>Esegue appena <strong>prima</strong> del rendering del form.</td>
-                </tr>
-                <tr>
-                    <td><strong>onFormSubmit / onBeforeFormSubmit</strong></td>
-                    <td>Function</td>
-                    <td>Eseguono dopo la validazione e <strong>prima</strong> dell'invio al server.</td>
-                </tr>
-                <tr>
-                    <td><strong>onFormSubmitted</strong></td>
-                    <td>Function</td>
-                    <td>Esegue <strong>dopo</strong> l'invio del form. Ideale per reindirizzamenti personalizzati.</td>
-                </tr>
-            </tbody>
-        </table>
-
-    </section>
-
-    <div id="testing-target-container">
-        <h3>🎯 Contenitore Target per il Form</h3>
-        <p>Questo è il <code>&lt;div id="hubspot-form-container"&gt;</code>. Quando esegui il codice JavaScript nella console, il form apparirà qui sotto.</p>
-        
-        <div id="hubspot-form-container">
-            Il form HubSpot apparirà qui (Esegui il codice in Console)
-        </div>
-    </div>
-</div>
   <header class="container" role="banner">
     <a href="#" class="logo" aria-label="Home">ShopDemo</a>
     <nav role="navigation" aria-label="Main menu">
@@ -856,9 +573,6 @@
 
     window.addEventListener('DOMContentLoaded', init);
   </script>
-  <!-- Start of HubSpot Embed Code -->
-<script type="text/javascript" id="hs-script-loader" async defer src="//js-eu1.hs-scripts.com/147076390.js"></script>
-<!-- End of HubSpot Embed Code -->
 
 <script src="https://js-eu1.hsforms.net/forms/embed/147076390.js" defer></script>
 <div class="hs-form-frame" data-region="eu1" data-form-id="a8ed8824-9522-400b-9308-f71df8ec1f92" data-portal-id="147076390"></div></body>
